# tc24r

./: .gitignore  CLAUDE.md  README.md
components/backend/: Cargo.toml
components/backend/crates/cc24-codegen/: Cargo.toml
components/backend/crates/cc24-codegen-tests/: Cargo.toml
components/backend/crates/cc24-codegen-tests/src/: codegen_checks.rs  cor24_ptr.rs  golden.rs  lib.rs
components/backend/crates/cc24-codegen-validate/: Cargo.toml
components/backend/crates/cc24-codegen-validate/src/: as24_basic.rs  as24_ops.rs  cor24_basic.rs  cor24_ops.rs  cor24_ptr.rs  lib.rs
components/cli/crates/cc24/: Cargo.toml
components/cli/crates/cc24/src/: main.rs
components/codegen-emit/crates/cc24-emit-core/: Cargo.toml
components/codegen-emit/crates/cc24-emit-data/: Cargo.toml
components/codegen-emit/crates/cc24-emit-load-store/: Cargo.toml
components/codegen-emit/crates/cc24-emit-load-store/src/: load.rs  store.rs
components/codegen-ops/: Cargo.toml
components/codegen-ops/crates/cc24-ops-arithmetic/: Cargo.toml
components/codegen-ops/crates/cc24-ops-bitwise/: Cargo.toml
components/codegen-ops/crates/cc24-ops-compare/: Cargo.toml
components/codegen-ops/crates/cc24-ops-divmod/: Cargo.toml
components/codegen-ops/crates/cc24-ops-incdec/: Cargo.toml
components/codegen-ops/crates/cc24-ops-incdec/src/: incdec.rs  lib.rs
components/codegen-ops/crates/cc24-ops-logical/: Cargo.toml
components/codegen-ops/crates/cc24-ops-unary/: Cargo.toml
components/codegen-ops/crates/cc24-type-infer/: Cargo.toml
components/codegen-ops/crates/tc24r-ops-compare/: Cargo.toml
components/codegen-ops/crates/tc24r-ops-compare/src/: compare.rs  lib.rs
components/codegen-ops/crates/tc24r-type-infer/: Cargo.toml
components/codegen-ops/crates/tc24r-type-infer/src/: lib.rs  simple.rs
components/codegen-stmt/crates/tc24r-stmt-control/: Cargo.toml
components/codegen-structure/: Cargo.toml
components/codegen-structure/crates/cc24-struct-isr/: Cargo.toml
components/codegen-structure/crates/cc24-struct-isr/src/: isr_epilogue.rs  isr_prologue.rs  lib.rs
components/codegen-structure/crates/cc24-struct-locals/: Cargo.toml
components/codegen-structure/crates/cc24-struct-prologue/: Cargo.toml
components/codegen-structure/crates/cc24-struct-prologue/src/: epilogue.rs  lib.rs  prologue.rs
components/frontend/: Cargo.toml
components/frontend/crates/cc24-lexer-tests/src/: lib.rs  tests_basic.rs  tests_extended.rs
components/frontend/crates/cc24-lexer/src/: lib.rs  operators.rs  readers.rs  scanner.rs
components/frontend/crates/cc24-parse-stream/src/: attrs.rs  lib.rs  stream.rs
components/frontend/crates/cc24-parser/: Cargo.toml
components/frontend/crates/cc24-parser-compound/: Cargo.toml
components/frontend/crates/cc24-parser-compound/src/: compound.rs  lib.rs
components/frontend/crates/cc24-parser-tests/src/: lib.rs  tests_basic.rs  tests_types.rs
components/frontend/crates/cc24-parser-typedef/: Cargo.toml
components/frontend/crates/cc24-parser-typedef/src/: lib.rs  typedef_parse.rs
components/frontend/crates/cc24-parser-types/: Cargo.toml
components/frontend/crates/cc24-parser-types/src/: lib.rs  type_parse.rs
components/frontend/crates/cc24-parser/src/: bitwise.rs  control.rs  decl.rs  expr.rs  stmt.rs
components/frontend/crates/cc24-preprocess/: Cargo.toml
components/frontend/crates/cc24-preprocess-tests/: Cargo.toml
components/frontend/crates/cc24-preprocess-tests/src/: lib.rs  tests_func_macro.rs  tests_func_macro2.rs
components/frontend/crates/cc24-preprocess/src/: func_args.rs  func_macro.rs  func_subst.rs  lib.rs  preprocess.rs  substitute.rs
components/frontend/crates/tc24r-parser-struct/src/: struct_parse.rs
components/frontend/crates/tc24r-parser-tests/src/: tests_basic.rs  tests_enum.rs  tests_types.rs
components/frontend/crates/tc24r-parser-typedef/src/: typedef_parse.rs
components/frontend/crates/tc24r-parser/src/: decl.rs  expr.rs  stmt.rs
components/frontend/crates/tc24r-preprocess/src/: preprocess.rs
components/macros/: Cargo.toml
components/macros/crates/cc24-asm-dsl/: Cargo.toml
components/macros/crates/cc24-macros-tests/: Cargo.toml
components/macros/crates/cc24-macros-tests/src/: lib.rs  tests_asm_dsl.rs
components/testing/: Cargo.toml
components/testing/crates/cc24-test-compile/: Cargo.toml
components/testing/crates/cc24-test-compile/src/: compile.rs  lib.rs
components/testing/scripts/: build.sh
demos/: button.c  demo.s  demo10.c  demo10.s  demo11.c  demo11.s  demo12.c  demo12.s  demo13.c  demo13.s  demo14.c  demo14.s  demo15.c  demo15.s  demo16.c  demo16.s  demo17.c  demo17.s  demo18.c  demo18.s  demo19.c  demo19.s  demo2.c  demo2.s  demo20.c  demo20.s  demo21.c  demo21.s  demo22.c  demo22.s  demo23.c  demo23.s  demo24.c  demo24.s  demo25.c  demo25.s  demo27.c  demo27.s  demo29.c  demo29.s  (+73 more)
docs/: abi-proposal.md  architecture.md  bug-tracking.md  c-data-model.md  demo2.c  demo2.s  improve-codegen.md  known-issues.md  linter-plans.md  plan.md  pluggable-research.md  refactor-plan.md  reference.md  status.md  sw-fp-research.md  test-plan.md  testing-status.md  toolchain-commands.md
docs/sample-asm/: fib.s
include/: stdio.h  stdlib.h  test.h
scripts/: run-beej-tests.sh  run-chibicc-test.sh  run-chibicc-tests.sh  run-subset-tests.sh
tests/chibicc-subset/: arith.c  control.c  function.c  pointer.c  variable.c
work/reg-rs/: cc24-demo1.out  cc24-demo1.rgt  cc24-demo10.out  cc24-demo10.rgt  cc24-demo11.out  cc24-demo11.rgt  cc24-demo12.out  cc24-demo12.rgt  cc24-demo13.out  cc24-demo13.rgt  cc24-demo14.out  cc24-demo14.rgt  cc24-demo15.out  cc24-demo15.rgt  cc24-demo16.out  cc24-demo16.rgt  cc24-demo17.out  cc24-demo17.rgt  cc24-demo18.out  cc24-demo19.out  cc24-demo2.out  cc24-demo2.rgt  cc24-demo20.out  cc24-demo20.rgt  cc24-demo21.out  cc24-demo22.out  cc24-demo23.out  cc24-demo24.out  cc24-demo24.rgt  cc24-demo25.out  cc24-demo3.out  cc24-demo3.rgt  cc24-demo4.out  cc24-demo4.rgt  cc24-demo5.out  cc24-demo5.rgt  cc24-demo6.out  cc24-demo6.rgt  cc24-demo7.out  cc24-demo7.rgt  (+35 more)
(+92 files in other folders)
