[package]
name = "cc24-codegen-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-codegen = { path = "../cc24-codegen" }
cc24-ast = { path = "../../../../components/core/crates/cc24-ast" }
cc24-lexer = { path = "../../../../components/frontend/crates/cc24-lexer" }
cc24-parser = { path = "../../../../components/frontend/crates/cc24-parser" }
cc24-test-compile = { path = "../../../../components/testing/crates/cc24-test-compile" }
cc24-test-golden = { path = "../../../../components/testing/crates/cc24-test-golden" }
