[package]
name = "cc24-codegen-validate"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-codegen = { path = "../cc24-codegen" }
cc24-lexer = { path = "../../../../components/frontend/crates/cc24-lexer" }
cc24-parser = { path = "../../../../components/frontend/crates/cc24-parser" }
tempfile = "3"
