[package]
name = "cc24-codegen-validate"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-codegen = { path = "../cc24-codegen" }
cc24-lexer = { path = "../../../../components/frontend/crates/cc24-lexer" }
cc24-parser = { path = "../../../../components/frontend/crates/cc24-parser" }
tempfile = "3"
cc24-test-compile = { path = "../../../../components/testing/crates/cc24-test-compile" }
cc24-test-cor24 = { path = "../../../../components/testing/crates/cc24-test-cor24" }
cc24-test-as24 = { path = "../../../../components/testing/crates/cc24-test-as24" }
