[package]
name = "cc24-ops-incdec"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-codegen-state = { path = "../../../codegen-state/crates/cc24-codegen-state" }
cc24-emit-core = { path = "../../../codegen-emit/crates/cc24-emit-core" }
cc24-emit-macros = { path = "../../../macros/crates/cc24-emit-macros" }
cc24-emit-load-store = { path = "../../../codegen-emit/crates/cc24-emit-load-store" }
