[package]
name = "cc24-parser-types"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-ast = { path = "../../../core/crates/cc24-ast" }
cc24-error = { path = "../../../core/crates/cc24-error" }
cc24-parse-stream = { path = "../cc24-parse-stream" }
cc24-token = { path = "../../../core/crates/cc24-token" }
