[package]
name = "cc24-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-ast = { path = "../../../core/crates/cc24-ast" }
cc24-error = { path = "../../../core/crates/cc24-error" }
cc24-parse-stream = { path = "../cc24-parse-stream" }
cc24-parser-compound = { path = "../cc24-parser-compound" }
cc24-parser-enum = { path = "../cc24-parser-enum" }
cc24-parser-typedef = { path = "../cc24-parser-typedef" }
cc24-parser-types = { path = "../cc24-parser-types" }
cc24-span = { path = "../../../core/crates/cc24-span" }
cc24-token = { path = "../../../core/crates/cc24-token" }
