[package]
name = "cc24-test-compile"
version = "0.1.0"
edition = "2024"

[dependencies]
cc24-lexer = { path = "../../../frontend/crates/cc24-lexer" }
cc24-parser = { path = "../../../frontend/crates/cc24-parser" }
cc24-codegen = { path = "../../../backend/crates/cc24-codegen" }
cc24-preprocess = { path = "../../../frontend/crates/cc24-preprocess" }
